--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/test-utils": "^2.3.2",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "jsdom": "^22.1.0",
+    "postcss": "^8.4.26",
     "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.3.9",
     "vitest": "^0.32.0"
   }
