--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsdom": "^22.1.0",
     "postcss": "^8.4.26",
     "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "tailwindcss": "^3.3.3",
     "vite": "^4.3.9",
     "vitest": "^0.32.0"
