--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/user-event": "^14.5.1",
+    "@testing-library/vue": "^7.0.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitest/coverage-v8": "^0.34.4",
     "@vue/eslint-config-prettier": "^7.1.0",
