--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.1.3",
     "@rushstack/eslint-patch": "^1.2.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/user-event": "^14.5.1",
